tests/js_error/source_locations/expression/binary/greater_than_or_eqaul.exp
TypeError: symbol cannot be converted to number
  ┌ source_locations/expression/binary/greater_than_or_eqaul.js:1:3
  |
1 | 1 >= Symbol.iterator
  |   ^
Stack trace:
  at <global> (source_locations/expression/binary/greater_than_or_eqaul.js:1:3)